--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -34,6 +34,13 @@
   </div>
 
   <dl>
+    <dt>V16.22 <span class="ver_date">(2024-01-26)</span></dt>
+    <dd>
+      ・SubDirList、Copy/Move_SS/SX コマンドで表示される選択ダイアログで、幅に余裕がある場合タイムスタンプを表示するようにしました。また、ファイルリストでアイコンが表示されている場合、選択ダイアログでも表示するようにしました。なお、名前に空白を含むディレクトリや、別の共有フォルダに移れなかったのを修正。<br>
+      ・共有フォルダ一覧(ShareList)も、SubDirList コマンドなどの選択ダイアログと同様の操作で任意の下位ディレクトリに移れるようにしました。<br>
+      ・イメージビューアでサムネイル全面表示/通常表示の切り替え時にエラーが発生する場合があったのを修正。<br>
+    </dd>
+
     <dt>V16.21 <span class="ver_date">(2024-01-24)</span></dt>
     <dd>
       ・NyanFi 上でクリップボードにコピーしたパス付きファイル名を履歴として保持するようにしました。この履歴は、ListFileName コマンドに追加された <b>CH</b> パラメータによって一覧表示することができます。なお、保持されている履歴のうち最大50個はINIファイルに保存され、次回起動時にも参照できます。<br>
