--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -34,6 +34,11 @@
   </div>
 
   <dl>
+    <dt>V16.24 <span class="ver_date">(2024-03-02)</span></dt>
+    <dd>
+      ・オプション設定 - キー設定 で、ChangeRegDir/ChangeOppRegDir コマンドのパラメータ候補に、V14.58以降で登録された項目が表示されなかったのを修正。<br>
+    </dd>
+
     <dt>V16.23 <span class="ver_date">(2024-02-29)</span></dt>
     <dd>
       ・開発環境にパッチ(RAD Studio 12 Patch 1)を適用。<br>
