--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -34,6 +34,16 @@
   </div>
 
   <dl>
+    <dt>V16.25 <span class="ver_date">(2024-03-07)</span></dt>
+    <dd>
+      ・GitGREP の結果リストにもスティッキー表示を追加。また、行番号の表示位置が揃うようにしました。<br>
+      ・別ウィンドウのテキストビューアで、文字列選択時に情報ヘッダ右端の表示が見切れるのを修正。<br>
+      ・スケーリングが100%より大きいとき、ヘッダの列幅とグリッドのセル幅にずれが生じる場合があったのを修正。また、XML/JSONビューアでノードの開閉ボタン位置がずれるのを修正。その他、画面の細部でスケーリングが適用されていなかった箇所を修正。<br>
+      ・XML/JSONビューアをスケーリングの異なるモニタに移動させると、エラーが発生する場合があったのを修正。<br>
+      ・ファイル名検索ダイアログをスケーリングの異なるモニタに移動させて拡張検索の開閉を行うと、ダイアログの高さが適切に設定されない場合があったのを修正。<br>
+      ・テキストビューアでダブルクリックによって単語や行を選択したとき、情報ヘッダに状態が反映されなかったのを修正。<br>
+    </dd>
+
     <dt>V16.24 <span class="ver_date">(2024-03-02)</span></dt>
     <dd>
       ・オプション設定 - キー設定 で、ChangeRegDir/ChangeOppRegDir コマンドのパラメータ候補に、V14.58以降で登録された項目が表示されなかったのを修正。<br>
