--- a/help/src/hid00002.htm
+++ b/help/src/hid00002.htm
@@ -61,6 +61,13 @@
       </p>
     </dd>
 
+    <dt class="no_bg">補助プログラム</dt>
+    <dd>
+      <b>shexe.exe</b><br>
+      パラメータで指定した実行ファイルを起動するだけの単純なプログラムです。<b>NyanFi.exe</b> と同じディレクトリに置いてください。<br>
+      「Windows」以外のVCLスタイルを適用している場合、ゾーン識別子を持つネットワーク先の実行ファイルを <a href="hid00005.htm#OpenStandard">OpenStandard</a> コマンドで開く際にセキュリティの警告ダイアログの<sapn class="btn_frame">実行</sapn>ボタンが機能しない現象に対処するためのものです。現状では NyanFi 側での対策が難しそうなので、このような実行ファイルは子プロセスではなく、このプログラムを介し別プロセスとして起動します。
+    </dd>
+
     <dt class="no_bg">アーカイバDLL</dt>
     <dd>
       アーカイブを扱うには、別途 <b>7-zip64.dll</b>、<b>tar64.dll</b>、<b>unrar64j.dll</b>(要 <b>unrar64.dll</b>) などが必用です。<br>
