--- a/help/src/hid00005.htm
+++ b/help/src/hid00005.htm
@@ -2641,6 +2641,9 @@ NyanFi.exe -Ld:\hoge -CL -XGrep_"にゃぁ":GrepSetMask_*.txt:GrepStart
       </div>
 
       <div class="spc_box note_text">
+        「Windows」以外のVCLスタイルを適用している場合、セキュリティの警告ダイアログの<span class="btn_frame">実行</span>ボタンが適切に機能しないため、ゾーン識別子を持つネットワーク先の実行ファイルについては、子プロセスではなく同梱の shexe.exe を介し別プロセスとして起動するようにしています。
+      </div>
+      <div class="spc_box note_text">
         <b>.mp3</b> の場合ID3タグの内容によっては再生できない場合がありますが、適切なコーデックを別途インストールすれば再生できるようになります(ADVANCED Codecs など)。<br>
       </div>
 
