--- a/help/src/hid00009.htm
+++ b/help/src/hid00009.htm
@@ -116,7 +116,7 @@
       Windows 11 の角丸ウィンドウ表示を無効化します。<br>
       なお、ファイルやディレクトリ選択などのコモンダイアログには適用されません。<br>
       <div class="info_text">
-        「Windows」以外のスタイルを選択している場合、この設定は効きません。<br>
+        「Windows」以外のスタイルを適用している場合、この設定は効きません。<br>
         「Windows 11 ～」では角丸ウィンドウ、それ以外は四角ウィンドウになります。
       </div>
     </dd>
