--- a/help/src/hid00023.htm
+++ b/help/src/hid00023.htm
@@ -27,8 +27,7 @@
   <h1>オプション設定 - フォント・配色</h1>
 
   <p class="link_box">
-    <a href="#Font">フォント</a> ／ <a href="#Style">スタイル</a> ／ <a href="#Color">配色</a> ／ <a
-      href="#TimeSize">タイムスタンプ/サイズの配色</a> ／ <a href="#ExtColor">拡張子別配色</a> ／ <a href="#Tag">タグ別配色</a>
+    <a href="#Font">フォント</a> ／ <a href="#Style">スタイル</a> ／ <a href="#Color">配色</a> ／ <a href="#TimeSize">タイムスタンプ/サイズの配色</a> ／ <a href="#ExtColor">拡張子別配色</a> ／ <a href="#Tag">タグ別配色</a>
   </p>
   <br>
 
@@ -76,49 +75,37 @@
       </div>
 
       <div class="info_text">
-        Windows 以外のスタイルを選択した場合、<a href="hid00009.htm#Show">オプション設定 - 一般 - 表示</a> の 「<b>角丸ウィンドウの無効化</b>」が機能しません。Windows11
-        ～ では角丸、それ以外では四角ウィンドウになります。<br>
+        「Windows」以外のスタイルを適用している場合、<a href="hid00009.htm#Show">オプション設定 - 一般 - 表示</a> の 「<b>角丸ウィンドウの無効化</b>」が機能しません。Windows11～ では角丸、それ以外では四角ウィンドウになります。<br>
+      </div>
+      <div class="info_text">
+        「Windows」以外のスタイルを適用している場合、NyanFi に対してシステムやアーカイバが表示するダイアログもスタイルの影響を受けますが、完全には適用されないため、表示が見にくくなる場合があります。 
       </div>
       <br>
     </dd>
 
     <dt id="Color"><img src="grpbox.png" alt=""> 配色</dt>
     <dd>一覧で対象を選び、<span class="btn_frame">...</span>ボタンを押して色を指定してください。<br>
-      また <img src="spuit.png" alt=""> <b>スポイト</b>アイコンをドラッグすると、マウス位置の色を取り込んで指定できます(<span
-        class="btn_frame">ESC</span>キーでキャンセル)。<br>
+      また <img src="spuit.png" alt=""> <b>スポイト</b>アイコンをドラッグすると、マウス位置の色を取り込んで指定できます(<span class="btn_frame">ESC</span>キーでキャンセル)。<br>
       この場合、設定グループボックスの右下に色見本が表示されます(最後の16色は「色の設定」ダイアログで作成した色)。<br>
-      色見本の表示色を変更したい場合は、設定メニュー「<b>色見本をファイルに保存</b>」で出力したファイル(<b>Swatchbook.INI</b>)を編集してください(<a
-        href="hid00102.htm#Swatchbook">→ NyanFi が用いるファイル</a>)。<br>
+      色見本の表示色を変更したい場合は、設定メニュー「<b>色見本をファイルに保存</b>」で出力したファイル(<b>Swatchbook.INI</b>)を編集してください(<a href="hid00102.htm#Swatchbook">→ NyanFi が用いるファイル</a>)。<br>
       <div class="spc_box">
         <span class="btn_frame">無効</span>ボタンが有効になる項目でボタンを押すと、デフォルト色になります。<br>
         スタイルの影響を受ける一般的な部分の色を無効にしておくと、スタイル変更時の修正が楽です。初期状態では、これらの多くが無効になっています。
       </div>
       <div class="spc_box">
-        「<b>リストの背景色(交互)</b>」は、通常のファイルリスト(背景画像なしの場合)、<a href="hid00067.htm">コマンドファイル一覧</a>、<a
-          href="hid00072.htm">拡張子別一覧</a>、<a href="hid00058.htm">最近編集/閲覧したファイル一覧</a>、<a href="hid00070.htm">栞マーク一覧</a>、<a
-          href="hid00083.htm">ダイレクトタグジャンプ</a>の候補一覧で、偶数行の表示に用いられます。<br>
+        「<b>リストの背景色(交互)</b>」は、通常のファイルリスト(背景画像なしの場合)、<a href="hid00067.htm">コマンドファイル一覧</a>、<a href="hid00072.htm">拡張子別一覧</a>、<a href="hid00058.htm">最近編集/閲覧したファイル一覧</a>、<a href="hid00070.htm">栞マーク一覧</a>、<a href="hid00083.htm">ダイレクトタグジャンプ</a>の候補一覧で、偶数行の表示に用いられます。<br>
       </div>
       <div class="spc_box">
         「<b>ファイル情報の強調文字色</b>」は、ファイル情報の右クリックメニューで「<b>この項目内容を強調表示</b>」をチェックしている場合の強調表示に用いられます。<br>
-        なお「<b>ファイル情報の～色</b>」は、文字情報(<a href="hid00006.htm#CharInfo">CharInfo</a>)、CSV/TSV項目の集計(<a
-          href="hid00006.htm#CsvCalc">CsvCalc</a>)、デバッグウィンドウ下部(<a href="hid00063.htm#Debug">Debug</a>)などにも用いられます。<br>
+        なお「<b>ファイル情報の～色</b>」は、文字情報(<a href="hid00006.htm#CharInfo">CharInfo</a>)、CSV/TSV項目の集計(<a href="hid00006.htm#CsvCalc">CsvCalc</a>)、デバッグウィンドウ下部(<a href="hid00063.htm#Debug">Debug</a>)などにも用いられます。<br>
       </div>
 
       <div class="spc_box">
-        「<b>アクティブな設定タブの背景色</b>/<b>文字色</b>」は、オプション設定の上部タブとキー設定の下部タブ、キー割り当て一覧(<a
-          href="hid00005.htm#KeyList">KeyList</a>)の下部タブ、コマンド名のコピー(<a
-          href="hid00005.htm#CopyCmdName">CopyCmdName</a>)の切り替えボタン、およびサブディレクトリ一覧(<a
-          href="hid00005.htm#SubDirList">SubDirList</a>)の切り替えボタンに適用されます。タブ数の少ない他のダイアログには適用されません。<br>
+        「<b>アクティブな設定タブの背景色</b>/<b>文字色</b>」は、オプション設定の上部タブとキー設定の下部タブ、キー割り当て一覧(<a href="hid00005.htm#KeyList">KeyList</a>)の下部タブ、コマンド名のコピー(<a href="hid00005.htm#CopyCmdName">CopyCmdName</a>)の切り替えボタン、およびサブディレクトリ一覧(<a href="hid00005.htm#SubDirList">SubDirList</a>)の切り替えボタンに適用されます。タブ数の少ない他のダイアログには適用されません。<br>
       </div>
 
       <div class="spc_box">
-        「<b>ツールウインドウの境界線</b>」を指定すると、デバッグウィンドウ(<a href="hid00063.htm#Debug">Debug</a>)、文字情報(<a
-          href="hid00006.htm#CharInfo">CharInfo</a>)、CSV/TSVレコード(<a
-          href="hid00006.htm#CsvRecord">CsvRecord</a>)、インスペクタ(<a
-          href="hid00006.htm#Inspector">Inspector</a>)、ビットマップビュー(<a
-          href="hid00006.htm#BitmapView">BitmapView</a>)、サブビューア(<a
-          href="hid00007.htm#SubViewer">SubViewer</a>)、浮動化されたルーペ(<a href="hid00007.htm#Loupe">Loupe</a>)/ヒストグラム(<a
-          href="hid00007.htm#Histogram">Histogram</a>)に、1px相当の境界線が表示されます。アクティブ/非アクティブで色は変わりません。Windows 10
+        「<b>ツールウインドウの境界線</b>」を指定すると、デバッグウィンドウ(<a href="hid00063.htm#Debug">Debug</a>)、文字情報(<a href="hid00006.htm#CharInfo">CharInfo</a>)、CSV/TSVレコード(<a href="hid00006.htm#CsvRecord">CsvRecord</a>)、インスペクタ(<a href="hid00006.htm#Inspector">Inspector</a>)、ビットマップビュー(<a href="hid00006.htm#BitmapView">BitmapView</a>)、サブビューア(<a href="hid00007.htm#SubViewer">SubViewer</a>)、浮動化されたルーペ(<a href="hid00007.htm#Loupe">Loupe</a>)/ヒストグラム(<a href="hid00007.htm#Histogram">Histogram</a>)に、1px相当の境界線が表示されます。アクティブ/非アクティブで色は変わりません。Windows 10
         でツールウインドウの境界が分かりにくい場合に利用してみてください。<br>
       </div>
 
@@ -127,9 +114,7 @@
       </div>
 
       <div class="spc_box">
-        <b>検索</b> <img src="edit.png" alt=""> 欄に文字列を入力して<span class="btn_frame">∨</span>/<span
-          class="btn_frame">∧</span>ボタン(or <span class="btn_frame">↓</span>/<span
-          class="btn_frame">↑</span>キー)を押すと一覧の内容を検索できます。<br>
+        <b>検索</b> <img src="edit.png" alt=""> 欄に文字列を入力して<span class="btn_frame">∨</span>/<span class="btn_frame">∧</span>ボタン(or <span class="btn_frame">↓</span>/<span class="btn_frame">↑</span>キー)を押すと一覧の内容を検索できます。<br>
       </div>
       <br>
     </dd>
