--- a/help/src/hid00103.htm
+++ b/help/src/hid00103.htm
@@ -16,6 +16,9 @@
 
   <ul>
     <li>
+      「Windows」以外のVCLスタイルを適用している場合、NyanFi に対してシステムやアーカイバが表示するダイアログもスタイルの影響を受けて、表示が見にくくなる場合があります。 
+    </li>
+    <li>
       実行ファイル(NyanFi.exe)が、一部のウィルススキャンで誤検知される場合があるようです。誤検知が生じる場合は、セキュリティソフトの信頼/除外リストなどに登録することで対処してください。もし
       NyanFi は信頼できないということでしたら、利用をお控えください。
     </li>
