--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -34,6 +34,12 @@
   </div>
 
   <dl>
+    <dt>V16.26 <span class="ver_date">(2024-03-26)</span></dt>
+    <dd>
+      ・「Windows」以外のVCLスタイルを適用している場合、ゾーン識別子を持つネットワーク先の実行ファイルを OpenStandard コマンドで開く際にセキュリティの警告ダイアログの「実行」ボタンが機能しない現象に対処。現状では NyanFi 側での対策が難しそうなので、このような実行ファイルについては、子プロセスではなく、同梱の shexe.exe を介し別プロセスとして起動するようにしました。これにより、警告ダイアログはVCLスタイルの影響を受けなくなります。shexe.exe は、指定した実行ファイルを起動するだけのプログラムです。NyanFi.exe と同じディレクトリに置いてください。「更新の確認」や「アーカイブから更新」で更新した場合は自動的にインストールされます。<br>
+      なお、オプション設定 - デザイン - モーダル表示効果 が有効な場合、セキュリティの警告ダイアログが表示されている状態で一旦他のアプリケーションをアクティブにしてから戻ってダイアログを閉じるとモーダルスクリーンが残ってしまう現象がありましたが、この対策によって別プロセスで実行されるため、モーダルスクリーンは表示されなくなっています。<br>
+    </dd>
+
     <dt>V16.25 <span class="ver_date">(2024-03-07)</span></dt>
     <dd>
       ・GitGREP の結果リストにもスティッキー表示を追加。また、行番号の表示位置が揃うようにしました。<br>
