--- a/help/src/hid00001.htm
+++ b/help/src/hid00001.htm
@@ -12,21 +12,20 @@
 
 <body>
   <div class="title_box">
-    <font size="4">2画面ファイラー</font>
-    <font size="6">NyanFi</font><br>
-    <font size="4">
-      for Windows<br><br><br>Version 16.26 (x64 VCLスタイル版)<br>
-    </font>
+    <span style="font-size: large;">2画面ファイラー</span>
+    <span style="font-size: xx-large;">NyanFi</span><br>
+    <span style="font-size: large;">
+      for Windows<br><br>Version 16.27 (x64 VCLスタイル版)<br>
+    </span>
   </div>
 
   <h1>概要</h1>
-  <p><big>キーボード操作主体の2画面ファイラーです。</big></p>
+  <p>キーボード操作主体の2画面ファイラーです。</p>
   <p>
     そこそこ多機能、ビューアもなかなか、FTP接続や簡易マクロ、タグ管理、Git連携機能なども実装。<br>
     デザインや操作を細かくカスタマイズできます。VCLスタイルによるライト/ダークモード表示が可能。<br>
   </p>
   <br>
-
 
   <h2>従来版との主な違い</h2>
 
