--- a/help/src/hid00005.htm
+++ b/help/src/hid00005.htm
@@ -4142,8 +4142,10 @@ var marker = L.marker([$Latitude$, $Longitude$]).addTo(map);
         EqualListWidth</a>
     </dd>
 
-    <dt id="WinMaximize">WinMaximize</dt>
-    <dd>ウィンドウを最大化します。</dd>
+    <dt id="WinMaximize">WinMaximize<span class="pram_text">[_TN]</span></dt>
+    <dd>ウィンドウを最大化します。<br>
+      パラメータに <b>TN</b> を指定すると、すでに最大化されていた場合は元のサイズに戻します。つまり、最大化/元に戻すのトグル切り替えになります。
+    </dd>
 
     <dt id="WinMinimize">WinMinimize</dt>
     <dd>ウィンドウを最小化します。</dd>
