--- a/help/src/hid00023.htm
+++ b/help/src/hid00023.htm
@@ -57,11 +57,15 @@
         Windows　　<span class="def_text">(従来の表示スタイル)</span><br>
         Windows10<br>
         Windows10 Blue<br>
-        Windows10 Charcoal<br>
+<!--    Windows10 Charcoal<br> -->
         Windows10 Dark<br>
         Windows10 Green<br>
         Windows10 Purple<br>
         Windows10 SlateGray<br>
+        Windows11 Impressive Dark<br>
+        Windows11 Impressive Dark SE<br>
+        Windows11 Impressive Light<br>
+        Windows11 Impressive Light SE<br>
         Windows11 Modern Dark<br>
         Windows11 Modern Light<br>
         Windows11 Polar Dark<br>
@@ -75,10 +79,10 @@
       </div>
 
       <div class="info_text">
-        「Windows」以外のスタイルを適用している場合、<a href="hid00009.htm#Show">オプション設定 - 一般 - 表示</a> の 「<b>角丸ウィンドウの無効化</b>」が機能しません。Windows11～ では角丸、それ以外では四角ウィンドウになります。<br>
+        「Windows」以外のスタイルを適用している場合、<a href="hid00009.htm#Show">オプション設定 - 一般 - 表示</a> の 「<b>角丸ウィンドウの無効化</b>」が機能しません。Windows11～ では角丸(末尾が SE のものは四角)、それ以外では四角ウィンドウになります。<br>
       </div>
       <div class="info_text">
-        「Windows」以外のスタイルを適用している場合、NyanFi に対してシステムやアーカイバが表示するダイアログもスタイルの影響を受けますが、完全には適用されないため、表示が見にくくなる場合があります。 
+        「Windows」以外のスタイルを適用している場合、NyanFi に対してシステムやアーカイバが表示するダイアログもスタイルの影響を受けますが、完全には適用されないため、表示が見にくくなる場合があります。
       </div>
       <br>
     </dd>
